force-app/main/default/objects/WorkoutSession__c/fields/DurationMinutes__c.field-meta.xml
<CustomField><fullName>DurationMinutes__c</fullName><label>所要時間_分</label><precision>3</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>