force-app/main/default/objects/WorkoutSession__c/fields/FatigueLevel__c.field-meta.xml
<CustomField><fullName>FatigueLevel__c</fullName><label>疲労度</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>低い</fullName><default>false</default><label>低い</label></value><value><fullName>普通</fullName><default>false</default><label>普通</label></value><value><fullName>高い</fullName><default>false</default><label>高い</label></value></valueSetDefinition></valueSet></CustomField>