force-app/main/default/objects/WorkoutSession__c/fields/Mood__c.field-meta.xml
<CustomField><fullName>Mood__c</fullName><label>気分</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>良い</fullName><default>false</default><label>良い</label></value><value><fullName>普通</fullName><default>false</default><label>普通</label></value><value><fullName>悪い</fullName><default>false</default><label>悪い</label></value></valueSetDefinition></valueSet></CustomField>