force-app/main/default/objects/WorkoutSession__c/fields/SatisfactionLevel__c.field-meta.xml
<CustomField><fullName>SatisfactionLevel__c</fullName><description>1〜5の数値を想定</description><label>達成感</label><precision>1</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>