force-app/main/default/objects/WorkoutSession__c/fields/Trainee__c.field-meta.xml
<CustomField><fullName>Trainee__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>このトレーニングを実施した利用者</description><label>利用者</label><referenceTo>Trainee__c</referenceTo><relationshipLabel>トレーニング実績</relationshipLabel><relationshipName>WorkoutSessions</relationshipName><required>false</required><type>Lookup</type></CustomField>