force-app/main/default/objects/WorkoutSession__c/fields/TrainingGoal__c.field-meta.xml
<CustomField><fullName>TrainingGoal__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>関連する目標。任意入力。</description><label>目標</label><referenceTo>TrainingGoal__c</referenceTo><relationshipLabel>トレーニング実績</relationshipLabel><relationshipName>WorkoutSessions</relationshipName><required>false</required><type>Lookup</type></CustomField>