force-app/main/default/objects/WorkoutSession__c/fields/WorkoutDateTime__c.field-meta.xml
<CustomField><fullName>WorkoutDateTime__c</fullName><label>実施日時</label><required>false</required><type>DateTime</type></CustomField>